Attempt to load javascript from local javascript rather than network.

--- a/p2s.html
+++ b/p2s.html
@@ -47,10 +47,11 @@ Visualization Date
 </div>
 
 
-<div id="version">v0.01</div>
+<div id="version">v0.03a</div>
 
 </form>  
-    <script src="http://www.christopherburman.com/sketchup/loader.js?p=0cc11" type="text/javascript" language="javascript">
+  <script src="./loader.js" type="text/javascript">
   </script>
 
-  </body></html>
+  </body>
+</html>
